--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -74,16 +74,13 @@ header li a.active {
     max-width: 1250px;
     margin: 0 auto; 
 }
-section:first-child{
-    margin: 0;
-    padding: 0;
-}
+
 .banner-background{
     background-image: url('../img/banner3.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     max-width:100%;
-    height:750px;
+    height:760px;
     background-position:100%;
     
 }
@@ -104,16 +101,17 @@ section:first-child{
 #servicos .servicos-card{
     display: flex;
     flex-direction:column;
-    height: 300px;
-    width: 220px;
+    max-height: 400px;
+    max-width: 225px;
     border-radius: 7px 7px 7px 7px;
     box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
 }
 #servicos .servicos-card:hover{
-    box-shadow: rgb(181, 127, 80) 0px 0px 0px 3px;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 #servicos img{
-    max-width: 220px;
+    max-width: 225px;
+    max-height: 200px;
     border-radius: 7px 7px 0 0;
     
 }
@@ -124,13 +122,13 @@ section:first-child{
     font-weight: 700;
     text-align: center;
     font-size: 18px;
-    color: #0B2545;
+    color: #000;
 }
 #servicos h4{
     font-weight: 300;
     text-align: center;
     font-size: 15px;
-    color: #0B2545;
+    color: #000;
 }
 #servicos .servico-info p{
     font-weight: 300;
@@ -139,13 +137,27 @@ section:first-child{
 }
 
 #servicos .servico-preco-btn{
-    max-width: 60px;
-    max-height: 40px;
-    padding: 10px;
-    background: #B57F50;
-    color:#FFF;
-
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
 }
+#servicos .servico-preco-btn button{
+    padding: 10px;
+    border-radius: 5px;
+    background-color: #B57F50;
+    color:#FFF;
+    max-width: 100px;
+    max-height: 40px;
+    border:none;
+}
+
+#servicos .servico-preco-btn a{
+    text-decoration: none;
+    color: #FFF;
+}
+
 #agendamento .agendamento-content button {
     display: block;
     position: relative;
@@ -156,8 +168,7 @@ section:first-child{
     border: none;
     border-radius: .4em;
     text-transform: uppercase;
-    font-size: 1.4em;
-    /* font-family: "Work Sans", sans-serif; */
+    font-size: 16px;
     font-weight: 500;
     letter-spacing: 0.04em;
     mix-blend-mode: color-dodge;
