--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -8,11 +8,6 @@ body{
     background-color: #fff;
 }
 
-h2{
-    font-size: 50px;
-    color: #004A8D;
-}
-
 /*cabeçalho*/
 header {
     width: 100%;
@@ -87,23 +82,27 @@ header button {
 header button a{
     text-decoration: none;
 }
+.img-perfil{
+    background-image: url('/front-end/img/escova1.png');
+}
 /*fim cabeçalho*/
 
 /*tela index*/
 
 /*welcome page*/
 #welcome-page{
-    max-width: 1400px;
+    max-width: 1480px;
     margin: 0 auto; 
 }
 #welcome-page .welcome-content .welcome-banner{
     padding: 20px;
     display: flex;
-    justify-content: center;
 }
 #welcome-page .welcome-content .img-desenho{
+    padding-top: 20px;
     position:end;
     width:800px;
+    align-items: center;
 }
 #welcome-page .welcome-content .logo-senac{
     width:70px;
@@ -114,6 +113,7 @@ font-size: 25px;
 flex-wrap: wrap;
 margin-top: 20px;
 color: grey;
+text-align: justify;
 }
 #welcome-page .welcome-banner .botao-login{
     width: 250px;
@@ -128,6 +128,9 @@ color: grey;
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
     rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
     font-size:25px;
+}
+#welcome-page .welcome-banner .botao-login:hover{
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
 #welcome-page .welcome-banner .botao-servicos{
     border: 2px solid #004A8D;
@@ -145,20 +148,21 @@ color: grey;
     display: flex;
     flex-direction: row;
     gap: 24px;
-    margin-top: 350px;
+    margin-top: 130px;
     align-items: bottom;
 }
+
 /*fim welcome page*/
 
 
 #servicos {
-    max-width: 1400px;
+    max-width: 1480px;
     margin: 0 auto; 
 }
 /*CARDS*/
 #servicos .servicos-content h2{
     text-decoration: none;
-    color:#004A8D;
+    color:#000;
     font-size: 65px;
     text-align: center;
     margin-bottom: 20px;
@@ -167,14 +171,15 @@ color: grey;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 50px;
     justify-content: center;
 }
 #servicos .servicos-card{
     display: flex;
     flex-direction:column;
+    justify-content: center;
     max-height: 400px;
-    max-width: 225px;
+    max-width: 250px;
     border-radius: 7px 7px 7px 7px;
     box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
 }
@@ -182,9 +187,10 @@ color: grey;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 #servicos img{
-    max-width: 225px;
+    max-width: 250px;
     max-height: 200px;
     border-radius: 7px 7px 0 0;
+    align-items: center;
     
 }
 #servicos .servico-info{
@@ -206,6 +212,7 @@ color: grey;
     font-weight: 300;
     font-style: italic;
     margin-top:10px;
+    text-align: center;  
 }
 #servicos .servico-preco-btn{
     display: flex;
@@ -229,48 +236,41 @@ color: grey;
 }
 
 /*banner agendamentos*/
-#agendamento .imagem-agendamentos{
-display: flex;
-justify-content: center;
-position: relative;
-}
-#agendamento .imagem-agendamentos img{
-    margin-top: 20px;
-    object-fit:contain;
-    max-width:1220px;
-    border-radius: 20px;
-}
 #agendamento .agendamento-content{
     display: flex;
-    flex-direction: row;
-    justify-content: right;
-    margin-right: 365px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 100px;
+    margin-top: 100px ;
+    padding: 20px;
 }
 #agendamento .agendamento-content h2{
-    position: absolute;
-    margin-top:-750px;
-    text-align: right;
-    color: #FFF;
-    font-size: 50px;
-
+     text-align: center;
+    color: #000;
+    font-size: 60px;
+}
+#agendamento .agendamento-content span{
+    border-bottom:5px solid #F7941D;
+    width: 1050px;
+    margin-top: 10px;
+    margin-bottom: 10px;    
 }
 #agendamento .agendamento-content button {
-    display: flex;
-    justify-content:flex-end;
-    align-items: center;
-    padding: 12px;
+    padding: 16px;
     border: none;
     background-color: #004A8D;
     border-radius: 5px;
-    position: absolute;
-    margin-top:-250px;
+    width: 250px;
 }
 #agendamento .agendamento-content a {
     text-decoration: none;
     color: #ffffff;
     font-size: 1.5em;
-    font-weight: 700;
+    font-weight: 600;
 }
+
 /*fim banner agendamentos*/
 /*fim tela index*/
 
