--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -387,14 +387,27 @@ text-align: justify;
 /*fim Filtro*/
 
 /*inicio lista de horario*/
+.lista-horario{
+    display: flex;
+    flex-direction: row;
+}
 
-
-
-.linha-completa {
+.linha-completa-sem-agendamento {
     padding: 20px;
     background-color: #fff;
     border-bottom: 2px solid #000;
     padding-bottom: 10px;
+    width: 360px;
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+}
+.linha-completa-sem-agendamento .linha{
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: left;
 }
 /*fim Tabela Horários*/
 /*Fim tela de agendamentos*/
